nav bar extra space on right side fixed

--- a/Styles/newStyle.css
+++ b/Styles/newStyle.css
@@ -25,4 +25,6 @@
     margin: 0px auto;
     border: 3px solid brown;
     margin-bottom: 10px;
+
+    padding: 0;
 }
